# PFE_LLM_art_generation

./: .gitignore  LICENSE  README.md  paths_cfg.py  pyproject.toml  test_pytorch.py
CLI/: cli.py  cli_generate.py  cli_train.py  mass_generate.py  presets.py
LLM/: __init__.py  model.py  saveManager.py
LLM/nanochat/: architecture_description.md  checkpoint_manager.py  common.py  flash_attention.py  fp8.py  gpt.py  loss_eval.py  optim.py  tokenizer.py
dataset/: sketch.txt  svg_dataset.py  test_dataset.py
etat_art/: explications.txt
experiments/codes/: _referAsMain.py  chunck_test.ipynb  experiment_gcode_generate.ipynb  experiment_gcode_training.ipynb  experiment_with_generate.ipynb  experiment_with_training.ipynb  firstTestsWithNanoChat copy.ipynb  firstTestsWithNanoChat.ipynb  first_tests_with_NanoChat.ipynb  models_affichage.ipynb  test_affichage_metrics.ipynb  test_datasets.ipynb  test_historique.ipynb  test_metrics.ipynb  test_metrics_2.ipynb  test_tokenizer.ipynb  train_tokenizers.ipynb
experiments/codes/test_tokenizer_save/: tokenizer.json
experiments/generations/: exemple5.txt  exemples.txt  exemples2.txt  exemples3.txt  exemples4.txt
experiments/generations/gcode/: example2_100_d10_hd128_cs1024_nhm8.gcode  example_100_d10_hd128_cs1024_nhm8_after_cleanfix_bf_norm.gcode  example_100_d10_hd128_cs1024_nhm8_after_norm_generalisation.gcode  exemple1.gcode  exemple2.gcode  exemple5.5M_10e.gcode  exemple5.5M_10e_0.7temp.gcode  exemple5.5M_1e.gcode  exemple5.5M_4e.gcode  exemple_100_d10_hd128_cs1024_nhm8.gcode  experimlent_100_1epoch.gcode
experiments/generations/gcode/gcode_relative/: ex1epoch.gcode  ex2epoch.gcode  (+3 more)
metrics/: affichage.py  chunck.py  historique.py  metrics.py
metrics/count_error_svg/: count_error.py
repository_svg/: new_svg
tokenizer_pfe/: tokenizer_project.py
(+10 files in other folders)
