[project]
name = "pfe-llm-art-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black[jupyter]>=26.3.1",
    "colorama>=0.4.6",
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "holo",
    "ipykernel>=7.1.0",
    "kernels>=0.11.7",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "psutil>=7.1.0",
    "python-dotenv>=1.2.1",
    "regex>=2025.9.1",
    "rustbpe>=0.1.0",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "termcolor>=3.3.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "transformers>=4.57.3",
    "vpype>=1.10",
    "vpype-gcode>=0.13.0",
    "wandb>=0.25.0",
    "zstandard>=0.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]
holo = { git = "https://github.com/vuvu700/holo.git", rev = "lite" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = ["torch==2.9.1",]
gpu = ["torch==2.9.1",]

[tool.uv]
conflicts = [[
    { extra = "cpu" },
    { extra = "gpu" },
],]
